--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body{
     width: 100%;
     height: 100vh;
     background-position: center;
-    background-image: url(RASHMITHAA.jpg);
+    background-image: url(images/RASHMITHAA.jpg);
     background-size: cover;
     padding-right:  50px 50%;
     background-repeat: no-repeat;
