--- a/style.css
+++ b/style.css
@@ -313,7 +313,7 @@ nav .fa-solid{
 }
 @media only screen and (max-width: 600px){
 #header{
-    background-image:url(rash.jpg) ;
+    background-image:url(images/rash.jpg) ;
 }
 .header-text{
         margin-top:100%;
